; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_nf_tables_api.c_nf_tables_deactivate_flowtable.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_nf_tables_api.c_nf_tables_deactivate_flowtable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nft_ctx = type { i32 }
%struct.nft_flowtable = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nf_tables_deactivate_flowtable(%struct.nft_ctx* %0, %struct.nft_flowtable* %1, i32 %2) #0 {
  %4 = alloca %struct.nft_ctx*, align 8
  %5 = alloca %struct.nft_flowtable*, align 8
  %6 = alloca i32, align 4
  store %struct.nft_ctx* %0, %struct.nft_ctx** %4, align 8
  store %struct.nft_flowtable* %1, %struct.nft_flowtable** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %13 [
    i32 129, label %8
    i32 130, label %8
    i32 128, label %8
  ]

8:                                                ; preds = %3, %3, %3
  %9 = load %struct.nft_flowtable*, %struct.nft_flowtable** %5, align 8
  %10 = getelementptr inbounds %struct.nft_flowtable, %struct.nft_flowtable* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, -1
  store i32 %12, i32* %10, align 4
  br label %13

13:                                               ; preds = %3, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
